--- a/tests/GladNet.PhotonServer.Server.Tests/GladNet.PhotonServer.Server.Tests.csproj
+++ b/tests/GladNet.PhotonServer.Server.Tests/GladNet.PhotonServer.Server.Tests.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B929B31-CA16-4D1B-A881-71054A7AF619}</ProjectGuid>
+    <ProjectGuid>{C0A0874D-2B7B-49C2-A904-83F398553749}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GladNet.PhotonServer.Common</RootNamespace>
-    <AssemblyName>GladNet.PhotonServer.Common</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <RootNamespace>GladNet.PhotonServer.Server.Tests</RootNamespace>
+    <AssemblyName>GladNet.PhotonServer.Server.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -39,21 +39,55 @@
     <Reference Include="GladNet.Serializer">
       <HintPath>..\..\lib\Dependency Builds\GladNet\DLLs\GladNet.Serializer.dll</HintPath>
     </Reference>
+    <Reference Include="GladNet.Server.Common">
+      <HintPath>..\..\lib\Dependency Builds\GladNet\DLLs\GladNet.Server.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Logging.Services">
       <HintPath>..\..\lib\Dependency Builds\LoggingServices\DLLs\Logging.Services.dll</HintPath>
     </Reference>
+    <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Net35Essentials">
       <HintPath>..\..\lib\Dependency Builds\Net35Essentials\DLLs\Net35Essentials.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=3.0.5813.39031, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Photon.SocketServer">
+      <HintPath>..\..\lib\Static Dependencies\PhotonServer\Photon.SocketServer.dll</HintPath>
+    </Reference>
+    <Reference Include="PhotonHostRuntimeInterfaces">
+      <HintPath>..\..\lib\Static Dependencies\PhotonServer\PhotonHostRuntimeInterfaces.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTests\GladNetPeerBaseTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\GladNet.PhotonServer.Common\GladNet.PhotonServer.Common.csproj">
+      <Project>{7b929b31-ca16-4d1b-a881-71054a7af619}</Project>
+      <Name>GladNet.PhotonServer.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\GladNet.PhotonServer.Server\GladNet.PhotonServer.Server.csproj">
+      <Project>{4500e916-2e0e-4e7a-8e5a-86f4975c7539}</Project>
+      <Name>GladNet.PhotonServer.Server</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
