--- a/tests/GladNet.PhotonServer.Server.Tests/GladNet.PhotonServer.Server.Tests.csproj
+++ b/tests/GladNet.PhotonServer.Server.Tests/GladNet.PhotonServer.Server.Tests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GladNet.PhotonServer.Server.Tests</RootNamespace>
     <AssemblyName>GladNet.PhotonServer.Server.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
