--- a/tests/GladNet.PhotonServer.Server.Tests/GladNet.PhotonServer.Server.Tests.csproj
+++ b/tests/GladNet.PhotonServer.Server.Tests/GladNet.PhotonServer.Server.Tests.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\GladNetPeerBaseTests.cs" />
+    <Compile Include="UnitTests\PhotonMessageParametersAdapterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
