--- a/src/GladNet.PhotonServer.Common/GladNet.PhotonServer.Common.csproj
+++ b/src/GladNet.PhotonServer.Common/GladNet.PhotonServer.Common.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\DeliveryMethodExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
