Fleshed out S2SPeers

--- a/src/GladNet.PhotonServer.Common/GladNet.PhotonServer.Common.csproj
+++ b/src/GladNet.PhotonServer.Common/GladNet.PhotonServer.Common.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\DeliveryMethodExtensions.cs" />
+    <Compile Include="IPeerContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
