--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: csharp
 solution: ./GladNet.PhotonServer.sln
 
-before_install:
-  - git submodule update --init --recursive
-
 install:
   - nuget install NUnit.Runners -Version 3.0.1 -OutputDirectory tests/testrunner
-  - nuget restore GladNet.PhotonServer.sln
+  - nuget restore GladNet.PhotonServer.sln -ConfigFile NuGet.config
 
 before_script:
   - chmod +x ./tests/RunTests.sh
