--- a/src/GladNet.PhotonServer.Server/GladNet.PhotonServer.Server.csproj
+++ b/src/GladNet.PhotonServer.Server/GladNet.PhotonServer.Server.csproj
@@ -41,6 +41,9 @@
       <HintPath>..\..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ExitGames.Logging.Log4Net">
+      <HintPath>..\..\lib\Static Dependencies\PhotonServer\ExitGames.Logging.Log4Net.dll</HintPath>
+    </Reference>
     <Reference Include="ExitGamesLibs">
       <HintPath>..\..\lib\Static Dependencies\PhotonServer\ExitGamesLibs.dll</HintPath>
     </Reference>
@@ -55,6 +58,9 @@
     <Reference Include="GladNet.Server.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\GladNet.Server.Common.1.0.1\lib\net45\GladNet.Server.Common.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\..\lib\Static Dependencies\PhotonServer\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Photon.SocketServer">
       <HintPath>..\..\lib\Static Dependencies\PhotonServer\Photon.SocketServer.dll</HintPath>
@@ -75,6 +81,7 @@
     <Compile Include="GladNet Services\PhotonServerIDisconnectionServiceHandlerAdapter.cs" />
     <Compile Include="GladNet Services\PhotonServerINetworkMessageSenderAdapter.cs" />
     <Compile Include="GladNetAppBase.cs" />
+    <Compile Include="Logging\PhotonServerLog4NetCommonLoggingILogAdapter.cs" />
     <Compile Include="Message\PhotonResponseMessageAdapter.cs" />
     <Compile Include="Message\PhotonEventMessageAdapter.cs" />
     <Compile Include="Message\PhotonStatusMessageAdapter.cs" />
