--- a/src/GladNet.PhotonServer.Client/GladNet.PhotonServer.Client.csproj
+++ b/src/GladNet.PhotonServer.Client/GladNet.PhotonServer.Client.csproj
@@ -68,6 +68,7 @@
     <Compile Include="GladNetPhotonPeer.cs" />
     <Compile Include="IClientNetworkMessageReciever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnityClientPeer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
