--- a/src/GladNet.PhotonServer.Common/packages.config
+++ b/src/GladNet.PhotonServer.Common/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net35" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net35" />
-  <package id="GladNet.Common" version="1.0.5" targetFramework="net35" />
-  <package id="GladNet.Serializer" version="1.0.5" targetFramework="net35" />
+  <package id="Easyception" version="2.0.0" targetFramework="net35" />
+  <package id="GladNet.Common" version="2.0.8" targetFramework="net35" />
+  <package id="GladNet.Encryption" version="2.0.8" targetFramework="net35" />
+  <package id="GladNet.Engine.Common" version="2.0.8" targetFramework="net35" />
+  <package id="GladNet.Message" version="2.0.8" targetFramework="net35" />
+  <package id="GladNet.Payload" version="2.0.8" targetFramework="net35" />
+  <package id="GladNet.Serializer" version="2.0.8" targetFramework="net35" />
   <package id="Net35Essentials" version="1.0.2" targetFramework="net35" />
 </packages>
