--- a/tests/GladNet.PhotonServer.Server.Tests/packages.config
+++ b/tests/GladNet.PhotonServer.Server.Tests/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
+  <package id="Easyception" version="2.0.0" targetFramework="net45" />
+  <package id="GladNet.Common" version="2.0.8" targetFramework="net45" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net46" />
   <package id="Net35Essentials" version="1.0.2" targetFramework="net45" />
   <package id="NUnit" version="3.0.1" targetFramework="net46" />
