Removed PhotonRouteBack and AUID; Moving to GladNet2

--- a/src/GladNet.PhotonServer.Common/GladNet.PhotonServer.Common.csproj
+++ b/src/GladNet.PhotonServer.Common/GladNet.PhotonServer.Common.csproj
@@ -88,14 +88,14 @@
     <Compile Include="Extensions\DeliveryMethodExtensions.cs" />
     <Compile Include="GladNet Services\PhotonServerIConnectionDetailsAdapter.cs" />
     <Compile Include="IPeerContainer.cs" />
-    <Compile Include="Message\PhotonRouteBackService.cs" />
     <Compile Include="Message\PhotonStatusMessageAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Concrete\AUIDServiceCollection.cs" />
-    <Compile Include="Services\AUID\IAUIDService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
